# Aidoku-sources

./: .gitignore  CONTRIBUTING.md  README.md  index.json  index.min.json
sources/: ar.promanga-v1.aix  en.aquamanga-v1.aix  en.armageddon-v1.aix  en.armageddon-v2.aix  en.armageddon-v3.aix  en.armageddon-v5.aix  en.asurascans-v10.aix  en.asurascans-v11.aix  en.asurascans-v12.aix  en.asurascans-v13.aix  en.asurascans-v15.aix  en.athreascans-v1.aix  en.aurorascans-v1.aix  en.batcave-v1.aix  en.comix-v18.aix  en.comix-v4.aix  en.comix-v5.aix  en.comix-v6.aix  en.comix-v7.aix  en.comix-v8.aix  en.drakescans-v1.aix  en.elftoon-v2.aix  en.firescans-v2.aix  en.flamecomics-v3.aix  en.flamecomics-v4.aix  en.freewebnovel-v2.aix  en.hivescans-v1.aix  en.madokami-v1.aix  en.magusmanga-v1.aix  en.mangabat-v7.aix  en.mangabat-v9.aix  en.mangademon-v7.aix  en.mangadistrict-v1.aix  en.mangago-v2.aix  en.mangago-v3.aix  en.mangakakalot-v2.aix  en.mangakakalot-v4.aix  en.manganato-v6.aix  en.manganato-v8.aix  en.manganelo-v2.aix  (+171 more)
sources/ar.promanga/: Cargo.toml
sources/en.aquamanga/: Cargo.toml
sources/en.armageddon/: Cargo.toml
sources/en.armageddon/res/: filters.json  source.json
sources/en.armageddon/src/: helpers.rs  lib.rs
sources/en.asurascans/: Cargo.toml  README.md
sources/en.athreascans/: Cargo.toml
sources/en.batcave/: Cargo.toml
sources/en.batcave/res/: filters.json  source.json
sources/en.batcave/src/: home.rs  lib.rs
sources/en.comix/: Cargo.toml
sources/en.drakescans/: Cargo.toml
sources/en.elftoon/: Cargo.toml
sources/en.firescans/: Cargo.toml
sources/en.flamecomics/: Cargo.toml
sources/en.freewebnovel/: Cargo.toml
sources/en.hivescans/: Cargo.toml
sources/en.madokami/: Cargo.toml
sources/en.magusmanga/: Cargo.toml
sources/en.mangademon/: Cargo.toml  README.md
sources/en.mangadistrict/: Cargo.toml
sources/en.mangago/: Cargo.toml
sources/en.mangago/res/: filters.json  source.json
sources/en.mangago/src/: crypto.rs  helpers.rs  lib.rs
sources/en.mangakakalot/: Cargo.toml
sources/en.manganato/: Cargo.toml
sources/en.manganelo/: Cargo.toml
sources/en.manganow/: Cargo.toml
sources/en.mangapark/: Cargo.toml
sources/en.mangareadorg/: Cargo.toml
sources/en.mangasect/: Cargo.toml
sources/en.mangatx/: Cargo.toml
sources/en.manhuagold/: Cargo.toml
sources/en.manhuaplusorg/: Cargo.toml
sources/en.manhwax/: Cargo.toml
sources/en.novelbuddy/: Cargo.toml
sources/en.nyxscans/: Cargo.toml
sources/en.qiscans/: Cargo.toml
sources/en.rizzfables/: Cargo.toml
sources/en.toonily/: Cargo.toml
sources/en.toonilyme/: Cargo.toml
sources/en.vortexscans/: Cargo.toml
sources/en.webtoonxyz/: Cargo.toml
sources/en.weebcentral/: Cargo.toml
sources/es.catharsisworld/: Cargo.toml  README.md
sources/es.eternalmangas/: Cargo.toml
sources/fr.bigsolo/: Cargo.toml
sources/fr.fmteam/: Cargo.toml
sources/fr.sushiscan/: Cargo.toml
sources/id.kanzenin/: Cargo.toml
sources/id.komiksin/: Cargo.toml
sources/id.komiktap/: Cargo.toml
sources/id.komikucom/: Cargo.toml
sources/id.mangasusu/: Cargo.toml
sources/id.manhwalist/: Cargo.toml
sources/id.natsu/: Cargo.toml
sources/it.mangaworld/: Cargo.toml
sources/it.mangaworldadult/: Cargo.toml
sources/ja.comicaction/: Cargo.toml
sources/ja.comicdays/: Cargo.toml
sources/ja.manga1000/: Cargo.toml
sources/ja.mangamura/: Cargo.toml
sources/multi.hitomi/: Cargo.toml
sources/multi.hitomi/res/: filters.json  settings.json  source.json
sources/multi.hitomi/src/: gg.rs  lib.rs  models.rs  search.rs  settings.rs
sources/multi.myreadingmanga/: Cargo.toml
sources/multi.myreadingmanga/.cargo/: config.toml
sources/multi.myreadingmanga/res/: filters.json  source.json
sources/multi.myreadingmanga/src/: helpers.rs  lib.rs  parser.rs
sources/vi.cmanga/: Cargo.toml
sources/vi.cmanga/res/: filters.json  source.json
sources/vi.cmanga/src/: lib.rs  models.rs
sources/vi.zettruyen/: Cargo.toml
sources/vi.zettruyen/res/: filters.json  source.json
sources/vi.zettruyen/src/: lib.rs  models.rs
sources/zh.copymanga/: Cargo.toml
sources/zh.copymanga/res/: filters.json  settings.json  source.json
sources/zh.copymanga/src/: html.rs  lib.rs  net.rs
sources/zh.copymanga/src/html/: mod.rs  test.rs
sources/zh.copymanga/src/json/: chapter_list.rs  mod.rs  page_list.rs
sources/zh.copymanga/src/json/chapter_list/: mod.rs  test.rs
sources/zh.copymanga/src/json/search/: mod.rs  test.rs
sources/zh.copymanga/src/net/: mod.rs  test.rs
sources/zh.godamanga/: Cargo.toml
sources/zh.godamanga/res/: filters.json  source.json
sources/zh.godamanga/src/: lib.rs
sources/zh.godamanga/src/html/: mod.rs
sources/zh.godamanga/src/json/: page_list.rs
sources/zh.godamanga/src/json/chapter_list/: mod.rs
sources/zh.godamanga/src/net/: mod.rs
sources/zh.jmcomic/: Cargo.toml
sources/zh.jmcomic/res/: filters.json  settings.json  source.json
sources/zh.jmcomic/src/: home.rs  lib.rs  models.rs  net.rs  settings.rs
sources/zh.manhuabika/: Cargo.toml
sources/zh.manhuabika/res/: settings.json  source.json
sources/zh.manhuabika/src/: crypto.rs  home.rs  lib.rs  settings.rs
sources/zh.manhuabika/src/json/: mod.rs
sources/zh.manhuabika/src/net/: mod.rs
sources/zh.wnacg/: Cargo.toml
sources/zh.wnacg/res/: filters.json  source.json
sources/zh.wnacg/src/: home.rs  lib.rs
sources/zh.wnacg/src/html/: mod.rs
sources/zh.wnacg/src/net/: mod.rs
sources/zh.zaimanhua/: Cargo.toml
sources/zh.zaimanhua/res/: filters.json  settings.json  source.json
sources/zh.zaimanhua/src/: helpers.rs  home.rs  lib.rs  models.rs  net.rs  settings.rs
templates/madara/: Cargo.toml
templates/madara/scripts/: README.md  update_genres.py
templates/madara/src/: crypto.rs  helpers.rs  imp.rs  lib.rs  models.rs
templates/mangathemesia/: Cargo.toml  README.md
templates/mangathemesia/src/: helpers.rs  imp.rs  lib.rs
templates/wpcomics/: Cargo.toml  README.md
templates/wpcomics/scripts/: get-options-id.ts  get-options-tag.ts
templates/wpcomics/src/: helpers.rs  imp.rs  lib.rs
(+522 files in other folders)
