[package]
name = "mangago"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
aes = "0.8"
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", version = "0.3.0" }
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
cbc = { version = "0.1", features = ["alloc"] }

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git" }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
