[package]
name = "zettruyen"
version = "0.1.0"
edition = "2024"

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git" }
wpcomics = { path = "../../templates/wpcomics" }
chrono = { version = "0.4.42", default-features = false, features = ["alloc", "serde"] }
serde = { version = "1.0.228", default-features = false, features = ["derive", "alloc"] }

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = ["test"] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
