[package]
name = "wnacg"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", version = "0.3.0", features = [
    "json",
] }
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }

[dev-dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", features = [
    "test",
] }
aidoku-test = { git = "https://github.com/Aidoku/aidoku-rs.git" }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true
